--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -19,8 +19,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: indechy@gmail.com
-    password: qefc kclz kgwq rhoc
+    username: example@gmail.com
+    password: example123
     properties:
       mail:
         smtp:
